# rust-playground-template

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: main.rs
tests/: adders_test.rs
